Group as object with member count
